--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+# MySQL properties
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/security_bootstrap?verifyServerCertificate=false&useSSL=false&requireSSL=false&useLegacyDatetimeCode=false&amp&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/security_bootstrap
+spring.datasource.username=root
+spring.datasource.password=root
+spring.mvc.hiddenmethod.filter.enabled=true
+
+# Hibernate properties
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#
+logging.level.org.springframework=debug
+logging.level.org.hibernate=debug
+
+
+
 
